fix select seat